@@ -1,3 +1,5 @@
+12-Apr-2016 Fixes #219. The minimum version of Bam assemblies specified by package definition files are now only checked for just those packages used to compile into an assembly. Previously, all packages found on all inspected repositories were checked, which could result in false positives.
+
 11-Apr-2016 ======== Version 1.0.2 beta 1 Release ========
 
 11-Apr-2016 Fixes #209. Xcode generation now supports identifying .tbd files, new in Xcode 7, which are text based dylib definition files. The LinkPrebuiltLibrary exercises this when targeting Xcode7.
